# rust-no-std-lvgl-simple-meter-crowpanel

./: .gitattributes  Cargo.toml  README.md  build.rs
.cargo/: config.toml
c_code/: lv_conf.h  wrapper.h
c_code/assets/: cloud24.c  gotham_bold_80.c
c_code/include_mock/: readme.md  stdarg.h
src/: bounce_buffer_dma.rs  display.rs  lib.rs  lv_glue.rs  lvgl_sys.rs  simple_meter_page.rs
